Show control always to avoid screen jumping.

--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -33,3 +33,7 @@
 .card button:hover {
     background-color: var(--color-3);
 }
+
+.disabled i {
+    color: #cccccc;
+}
